interventie2/static/css/styles.css
/* ... */
    header a {
        text-decoration: none;
        font-family: "Poppins", sans-serif;
    }
    .logo {
        grid-area: logo;

    }
    @media only screen and (max-width: 845px) {
        .logo {
            display:none;
        }
    }

    .modes {
        grid-area: modes;
        padding: 0px;
        margin: 0px;
    }
    .modes button {
        background: inherit;
        outline: none;
        cursor: pointer;
        padding: 0.4rem 0.4rem;
        margin: 0 0.5rem 0 0;
        border: none;
        border-radius: 0px;
        color: white;
        font-family: "Poppins", sans-serif;
        font-size: smaller;
        min-width: 0;
    }     
    .modes a{
        text-decoration: none;
    }   
    .modes button:hover {
        color: white;
        background-color: var(--highlight);
        text-decoration: none;
    }       


nav {
    grid-area: nav;
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-areas:
        "title search"
        "steps  steps"
        "tabs  tabs  ";

    align-items: center;
    margin: 3rem 3rem 1rem 5rem;

}

    .title {
        grid-area: title;
        font-family: "Poppins", sans-serif;
        color: black;
        font-size: xx-large;
        font-weight: bold;
        padding: 0 0 1rem 0;
        line-height: 1em;
    }
    @media only screen and (max-width: 845px) {
        .title {
            font-size: x-large;
        }
    }

    .search {
        grid-area: search;
        display: flex;
        align-items: center;
        text-decoration: none;
        border: none;
    }
        .search input {
            background-color: white;;
            border: 1px solid black;
            border-radius: 3px;
            padding: 5px;
            font-size: smaller;
            height: 1.7rem;
        }
        
    .tabs {
        grid-area: tabs;
        display: flex;
        padding-top: 3rem;
        overflow: hidden;
        font-size: inherit;
        border-bottom: 1px solid black;
    }

        .tabs button {
            background: inherit;
            color: black;
            outline: none;
            cursor: pointer;
            padding: 0rem 2rem 0rem 2rem;
            margin: 0 0.5rem 0 0;
            border: none;
            border-radius: 0px;
            font-size: inherit;
            width: auto;
            border-bottom: solid 2px white;
        }        
        .tabs button:hover {
            border-bottom: solid 2px var(--dark-blue);
            
        }       
        .tabs button.active_tab {
            border-bottom: solid 2px var(--dark-blue);
        }
        @media only screen and (max-width: 845px) {
            .tabs {
                padding-top: 1rem;
            }
            .tabs button {
                padding: 0rem 0.5rem 0rem 0.5rem;
                margin: 0 0.2rem 0 0;
            }
        }

    .steps {
        grid-area: steps;
        display: flex;
        overflow: hidden;
        font-size: inherit;
    }
        .steps:empty {
            display: none;
        }
        .steps {
            background: inherit;
            color: var(--mid-grey);
            outline: none;
            cursor: pointer;
            border: none;
            border-radius: 0px;
            font-size: inherit;
        }    
        .step {
            margin-right: 2em;
        }
        .step:before {
            content: "⯇";
            margin-right: 0.5em;
        }    
        .step:hover {
            color: black;
        }
        .steps a {
            text-decoration: none;
        }
    
main {
    grid-area: main;
    padding: 1rem 5rem;
    display: grid;
    grid-template-columns: min-content 100%;
    grid-template-areas: 
        "aside section ";
    overflow-y: scroll;
}
    aside {
        grid-area: aside;
        background-color: var(--object);
    }
        aside:empty {
            display: none;
        }
        @media only screen and (max-width: 845px) {
            aside {
                border-top: 1px solid var(--mid-grey);
                margin-left: 1rem;
            }
        }
    aside ul {
        padding: 0;
    }
    section {
        grid-area: section;
        padding: 0;
        margin-left: 1rem;
        margin-right: 1rem;
    }

footer {
    grid-area: footer;
    background-color: black;
    color: white;
    align-items: center;
    padding: 0.2rem 5rem;
    font-size: small;
}

/* Phone changes  */

@media only screen and (max-width: 845px) {
    main {
        grid-area: main;
        display: grid;
        grid-template-columns: auto;
        grid-template-areas:
            "section"
            "aside";
        padding: 0.5rem 0 0 0;
    }
}
@media only screen and (max-width: 845px) {
    header {
        grid-area: header;
        display: grid;
        grid-template-columns: auto;
        grid-template-areas:
            "logo"
            "modes";
        padding: 0.5rem 0.5rem;
    }
}
@media only screen and (max-width: 845px) {
    nav {
        grid-area: nav;
        display: grid;
        grid-template-columns: auto;
        grid-template-areas:
            "title"
            "search"
            "steps"
            "tabs";
        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
        margin: 0.5rem;

    }
}


/* Work area (contains cards or text, and sometimes also a contents bar) */
.card_area {
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
    padding-bottom: 2rem;    
}
@media only screen and (max-width: 845px) {
    .card_area {
        flex-direction: column;
        flex-grow: 1;
        flex-shrink: 0;
        
    }
}

.card_row {
    display: flex;
    box-sizing: border-box;
    flex-flow: row;
    overflow: scroll;
    gap: 1rem;
    padding-bottom: 2rem;    
}
@media only screen and (max-width: 845px) {
    .card_row {
        flex-direction: column;
        flex-grow: 0;
        flex-shrink: 0;
        
    }
}
/* ... */

